--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     ></script>
 
     <!-- CSS Stylesheet to Personalize Style -->
-    <link rel="stylesheet" type="text/css" href="./CSS/styles.css" />
+    <link rel="stylesheet" type="text/css" href="./public/CSS/styles.css" />
 
     <!-- Google Fonts -->
     <link
@@ -42,7 +42,7 @@
 
 
     <!-- Javascript Link -->
-    <script src="./javascript/practice.js"></script>
+    <script src="./public/javascript/practice.js"></script>
   </head>
 
   <body class="background">
@@ -65,11 +65,6 @@
       <div id="wrong" class="score-text d-flex justify-content-center"></div>
 
 
-
-      <!-- Question page -->
-      <!-- <div id="timeLeft" class="time-text"></div> -->
-      <br />
-      <!-- <div id="currentQuestion" class="question-number-text"></div> -->
       <br />
       <div class="question question-text"></div>
       <br />
