--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="container">
           <h1 class="display-4 headfont d-flex justify-content-center">Bub's Horoscope Game</h1>
           <p class="lead leadfont d-flex justify-content-center">Are you a true Astrologist?</p>
-          <img class="intro-img img-fluid d-flex justify-content-center" src="./images/pic1.jpg">
+          <img class="intro-img img-fluid d-flex justify-content-center" src="./public/images/pic1.jpg">
         </div>
       </div>
     </header>
